--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,20 @@ jobs:
       with:
         name: ci-${{ matrix.os }}
         path: ./reports
+  mirror:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Push image
+      uses: docker/build-push-action@v1
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        registry: ${{ secrets.DOCKER_REGISTRY }}
+        repository: stardustdl/judge0
+        tags: latest
+        dockerfile: ./docker/Dockerfile
   invoke-cd:
     needs: ci
     runs-on: ubuntu-latest
