--- a/test/Test.Base/Test.Base.csproj
+++ b/test/Test.Base/Test.Base.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Judge0\Judge0.csproj" />
+  </ItemGroup>
+
 </Project>
