--- a/src/Judge0/Judge0.csproj
+++ b/src/Judge0/Judge0.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -14,6 +14,7 @@
     <RepositoryType>Git</RepositoryType>
     <PackageId>Judge0</PackageId>
     <Product>Judge0</Product>
+    <Description>Client SDK for Judge0 RESTful API.</Description>
   </PropertyGroup>
 
   <ItemGroup>
