--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        apiVersion: ["1.9.0", "1.8.0"]
+        apiVersion: ["1.9.0", "1.8.0", "1.7.1", "1.7.0", "1.6.0", "1.5.0"]
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
