--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ defaults:
 
 env:
   dotnet-version: "3.1.x"
-  build_version: "0.0.2.${{ github.run_number }}"
+  build_version: "0.0.3"
 
 jobs:
   pub-pkgs:
