--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest]
         apiVersion: ["1.9.0", "1.8.0", "1.7.1", "1.7.0", "1.6.0", "1.5.0"]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -46,7 +45,7 @@ jobs:
     - name: Upload reports
       uses: actions/upload-artifact@v2
       with:
-        name: ci-${{ matrix.os }}
+        name: ci-${{ matrix.apiVersion }}
         path: ./reports
   invoke-cd:
     needs: ci
